move RGB values check to class Floss